tests/ui/crablang-2018/async-ident-allowed.stderr
error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident-allowed.rs:9:9
   |
LL |     let async = 3;
   |         ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (CrabLang 2015) but is a hard error in CrabLang 2018!
   = note: for more information, see issue #49716 <https://github.com/crablang/crablang/issues/49716>
note: the lint level is defined here
  --> $DIR/async-ident-allowed.rs:3:9
   |
LL | #![deny(crablang_2018_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents)]` implied by `#[deny(crablang_2018_compatibility)]`

error: aborting due to previous error

